fix: improve scrollbar styles

--- a/packages/editor/scss/_theme.scss
+++ b/packages/editor/scss/_theme.scss
@@ -23,8 +23,7 @@
 
     --metascore-scrollbar-width: 8px;
     --metascore-scrollbar-track-color: var(--metascore-color-bg-primary);
-    --metascore-scrollbar-thumb-color: var(--metascore-color-bg-secondary);
-    --metascore-scrollbar-thumb-active-color: var(--metascore-color-accent);
+    --metascore-scrollbar-thumb-color: var(--metascore-color-bg-tertiary);
     --metascore-scrollbar-thumb-min-height: 8px;
 
     --metascore-controller-top-height: 2.5em;
