--- a/packages/player/scss/_theme.scss
+++ b/packages/player/scss/_theme.scss
@@ -13,9 +13,8 @@
   --metascore-color-accent: #0000fe;
 
   --metascore-scrollbar-width: 8px;
-  --metascore-scrollbar-track-color: var(--metascore-color-bg-tertiary);
-  --metascore-scrollbar-thumb-color: var(--metascore-color-bg-secondary);
-  --metascore-scrollbar-thumb-active-color: var(--metascore-color-accent);
+  --metascore-scrollbar-track-color: var(--metascore-color-bg-primary);
+  --metascore-scrollbar-thumb-color: var(--metascore-color-bg-tertiary);
   --metascore-scrollbar-thumb-min-height: 8px;
 
   --metascore-controller-top-height: 2.5em;
